--- a/index.html
+++ b/index.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="header">
+        <h1>Memo images game - Artists edition</h1>
+    </div>
+    <div class="main">
+        <div class="images">
+            <img src="img/21savage.jpg" alt="21 savage" width="300">
+            <img src="img/asap.jpg" alt="asap rocky" width="240">
+            <img src="img/days_before.jpg" alt="travis scott" width="300">
+            <img src="img/eminem.jpg" alt="eminem" width="300">
+            <img src="img/tyler.jpg" alt="tyler the creator" width="300">
+            <img src="img/kdot.jpg" alt="kendrick lamar" width="300">
+            <img src="img/noyz_salmo.jpg" alt="noyz salmo" width="300">
+            <img src="img/theweeknd.jpg" alt="theweeknd" width="300">
+            <img src="img/future.jpg" alt="future" width="280">
+        </div>
+    </div>
+    <div class="footer">
+
+    </div>
 </body>
 </html>
