--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <img src="img/days_before.jpg" alt="travis scott" width="300">
             <img src="img/eminem.jpg" alt="eminem" width="300">
             <img src="img/tyler.jpg" alt="tyler the creator" width="300">
-            <img src="img/kdot.jpg" alt="kendrick lamar" width="300">
+            <img src="img/Kendrick Lamar.jpeg" alt="kendrick lamar" width="300">
             <img src="img/noyz_salmo.jpg" alt="noyz salmo" width="300">
-            <img src="img/theweeknd.jpg" alt="theweeknd" width="300">
+            <img src="img/theweeknd_mask.jpeg" alt="theweeknd" width="300">
             <img src="img/future.jpg" alt="future" width="280">
         </div>
     </div>
