--- a/index.html
+++ b/index.html
@@ -4,23 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memo</title>
+    <link rel="icon" href="img/icon.jpg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header">
-        <h1>Memo images game - Artists edition</h1>
+        <h1 style="margin-top: 0; padding-top: 10px;">Memo images game - Artists edition</h1>
     </div>
-    <div class="main">
-        <div class="images">
-            <img src="img/21savage.jpg" alt="21 savage" width="300">
-            <img src="img/asap.jpg" alt="asap rocky" width="240">
-            <img src="img/days_before.jpg" alt="travis scott" width="300">
-            <img src="img/eminem.jpg" alt="eminem" width="300">
-            <img src="img/tyler.jpg" alt="tyler the creator" width="300">
-            <img src="img/Kendrick Lamar.jpeg" alt="kendrick lamar" width="300">
-            <img src="img/noyz_salmo.jpg" alt="noyz salmo" width="300">
-            <img src="img/theweeknd_mask.jpeg" alt="theweeknd" width="300">
-            <img src="img/future.jpg" alt="future" width="280">
+    <div class="container">
+        <div class="main">
+            <div class="images">
+                <img src="img/jackboys.jpeg" alt="21 savage" width="300">
+                <img src="img/asap rocky.jpeg" alt="asap rocky" width="240">
+                <img src="img/travis scott.jpeg" alt="travis scott" width="300">
+                <img src="img/_.jpeg" alt="eminem" width="300">
+                <img src="img/Tyler the creator.jpeg" alt="tyler the creator" width="300">
+                <img src="img/squabbleup.jpeg" alt="kendrick lamar" width="300">
+                <img src="img/noyz_salmo.jpg" alt="noyz salmo" width="300">
+                <img src="img/weeknd1.jpeg" alt="theweeknd" width="300">
+                <img src="img/future.jpg" alt="future" width="280">
+            </div>
+        </div>
+        <div class="panel">
+            <h1>Testiamo!</h1>
+            <div class="ImageSelected">
+                <img src="img/jackboys.jpeg" alt="21 savage" width="200">
+            </div>
+            <p>Quante volte hai visto questa immagine?</p>
+            <input type="number" id="counter">
         </div>
     </div>
     <div class="footer">
