--- a/index.html
+++ b/index.html
@@ -26,16 +26,25 @@
             </div>
         </div>
         <div class="panel">
-            <h1>Testiamo!</h1>
-            <div class="ImageSelected">
-                <img src="img/jackboys.jpeg" alt="21 savage" width="200">
+            <div class="start">
+                <h1>Benvenuto nel memo sugli artisti</h1>
+                <h2>Premi start e gioca!</h2>
+                <br><br>
+                <button id="ButtonStart" class="btn-12"><span>Start!</span></button>
             </div>
-            <p>Quante volte hai visto questa immagine?</p>
-            <input type="number" id="counter">
+            <div class="test">
+                <h1>Testiamo!</h1>
+                <div class="ImageSelected">
+                    <img src="img/jackboys.jpeg" alt="21 savage" width="200">
+                </div>
+                <p>Quante volte hai visto questa immagine?</p>
+                <input type="number" id="counter">
+            </div>
         </div>
     </div>
     <div class="footer">
 
     </div>
+    <script src="sheet.js"></script>
 </body>
 </html>
