--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <div class="container">
         <div class="main">
             <div class="images">
-                <img src="img/jackboys.jpeg" alt="21 savage" width="300">
-                <img src="img/asap rocky.jpeg" alt="asap rocky" width="240">
-                <img src="img/travis scott.jpeg" alt="travis scott" width="300">
-                <img src="img/_.jpeg" alt="eminem" width="300">
-                <img src="img/Tyler the creator.jpeg" alt="tyler the creator" width="300">
-                <img src="img/squabbleup.jpeg" alt="kendrick lamar" width="300">
-                <img src="img/noyz_salmo.jpg" alt="noyz salmo" width="300">
-                <img src="img/weeknd1.jpeg" alt="theweeknd" width="300">
-                <img src="img/future.jpg" alt="future" width="280">
+                <img src="img/jackboys.jpeg" alt="21 savage" width="300" id="image1">
+                <img src="img/asap rocky.jpeg" alt="asap rocky" width="240" id="image2">
+                <img src="img/travis scott.jpeg" alt="travis scott" width="300" id="image3">
+                <img src="img/_.jpeg" alt="eminem" width="300" id="image4">
+                <img src="img/Tyler the creator.jpeg" alt="tyler the creator" width="300" id="image5">
+                <img src="img/squabbleup.jpeg" alt="kendrick lamar" width="300" id="image6">
+                <img src="img/noyz_salmo.jpg" alt="noyz salmo" width="300" id="image7">
+                <img src="img/weeknd1.jpeg" alt="theweeknd" width="300" id="image8">
+                <img src="img/future.jpg" alt="future" width="280" id="image9">
             </div>
         </div>
         <div class="panel">
@@ -31,6 +31,17 @@
                 <h2>Premi start e gioca!</h2>
                 <br><br>
                 <button id="ButtonStart" class="btn-12"><span>Start!</span></button>
+            </div>
+            <div class="loading">
+                <h1>Scegliendo l'immagine...</h1>
+                <div class="wrapper">
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="shadow"></div>
+                    <div class="shadow"></div>
+                    <div class="shadow"></div>
+                </div>
             </div>
             <div class="test">
                 <h1>Testiamo!</h1>
@@ -41,9 +52,6 @@
                 <input type="number" id="counter">
             </div>
         </div>
-    </div>
-    <div class="footer">
-
     </div>
     <script src="sheet.js"></script>
 </body>
