--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
             <div class="test">
                 <h1>Testiamo!</h1>
                 <div class="ImageSelected">
-                    <img src="img/jackboys.jpeg" alt="21 savage" width="200">
+                    <img src="img/jackboys.jpeg" alt="21 savage" width="200" id="TestImage">
                 </div>
                 <p>Quante volte hai visto questa immagine?</p>
                 <input type="number" id="counter">
+                <input type="submit" value="Invia!" id="ButtonSubmit">
             </div>
         </div>
     </div>
