--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <img src="img/jackboys.jpeg" alt="21 savage" width="300" id="image1">
                 <img src="img/asap rocky.jpeg" alt="asap rocky" width="240" id="image2">
                 <img src="img/travis scott.jpeg" alt="travis scott" width="300" id="image3">
-                <img src="img/theweeknd.jpeg" alt="eminem" width="300" id="image4">
+                <img src="img/theweeknd.jpeg" alt="weeknd" width="300" id="image4">
                 <img src="img/Tyler the creator.jpeg" alt="tyler the creator" width="300" id="image5">
                 <img src="img/squabbleup.jpeg" alt="kendrick lamar" width="300" id="image6">
                 <img src="img/noyz_salmo.jpg" alt="noyz salmo" width="300" id="image7">
