--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <h1 style="margin-top: 0; padding-top: 10px;">Memo images game - Artists edition</h1>
+        <h1 style="margin-top: 0; padding-top: 20px;">Memo images game - Artists edition</h1>
     </div>
     <div class="container">
         <div class="main">
@@ -17,7 +17,7 @@
                 <img src="img/jackboys.jpeg" alt="21 savage" width="300" id="image1">
                 <img src="img/asap rocky.jpeg" alt="asap rocky" width="240" id="image2">
                 <img src="img/travis scott.jpeg" alt="travis scott" width="300" id="image3">
-                <img src="img/eminem.jpg" alt="eminem" width="300" id="image4">
+                <img src="img/eminem.jpeg" alt="eminem" width="300" id="image4">
                 <img src="img/Tyler the creator.jpeg" alt="tyler the creator" width="300" id="image5">
                 <img src="img/squabbleup.jpeg" alt="kendrick lamar" width="300" id="image6">
                 <img src="img/noyz_salmo.jpg" alt="noyz salmo" width="300" id="image7">
