--- a/index.html
+++ b/index.html
@@ -46,11 +46,19 @@
             <div class="test">
                 <h1>Testiamo!</h1>
                 <div class="ImageSelected">
-                    <img src="img/jackboys.jpeg" alt="21 savage" width="200" id="TestImage">
+                    <img src="img/jackboys.jpeg" alt="imagine scelta" width="200" id="TestImage">
                 </div>
                 <p>Quante volte hai visto questa immagine?</p>
                 <input type="number" id="counter">
-                <input type="submit" value="Invia!" id="ButtonSubmit">
+                <button type="submit" value="Invia!" id="ButtonSubmit">Invia!</button>
+            </div>
+            <div class="result-positive">
+                <h1>✅ Hai indovinato!</h1>
+                <p id="resume-positive"></p>
+            </div>
+            <div class="result-negative">
+                <h1>❌ Ops, hai sbagliato!</h1>
+                <p id="resume-negative"></p>
             </div>
         </div>
     </div>
