--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
             <div class="result-positive">
                 <h1>✅ Hai indovinato!</h1>
                 <p id="resume-positive"></p>
-                <button id="ButtonRestart" class="btn-12"><span>Restart!</span></button>
+                <button id="ButtonRestart">Restart!</button>
             </div>
             <div class="result-negative">
                 <h1>❌ Ops, hai sbagliato!</h1>
                 <p id="resume-negative"></p>
-                <button id="ButtonRestart" class="btn-12"><span>Restart!</span></button>
+                <button id="ButtonRestart">Restart!</button>
             </div>
         </div>
     </div>
