--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="result-positive">
                 <h1>✅ Hai indovinato!</h1>
                 <p id="resume-positive"></p>
-                <button id="ButtonStart" class="btn-12"><span>Start!</span></button>
+                <button id="ButtonRestart" class="btn-12"><span>Restart!</span></button>
             </div>
             <div class="result-negative">
                 <h1>❌ Ops, hai sbagliato!</h1>
